reformat chapters of notebook

--- a/AndroidScience.ipynb
+++ b/AndroidScience.ipynb
@@ -584,6 +584,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory plots\n",
+    "We plot some data, to see its ranges"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 251,
    "metadata": {
@@ -613,6 +621,13 @@
     "axs[2].hist(dfp['Installs']);\n",
     "axs[2].set_xlabel('Installs');\n",
     "fig.subplots_adjust(right = 2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A linear model"
    ]
   },
   {
