add correct scores for svm

--- a/AndroidScience.ipynb
+++ b/AndroidScience.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -912,17 +912,27 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "0.8444811070568267"
+       "0.8440251767950099"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.026713445482874243"
+      ]
+     },
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,9 +941,17 @@
     "from sklearn import svm\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size = 0.2, random_state = 42)\n",
     "svr = svm.SVR()\n",
-    "svr.fit(X, Y)\n",
-    "svr.score(X, Y)\n"
+    "svr.fit(x_train, y_train)\n",
+    "svr.score(x_train, y_train)\n",
+    "svr.score(x_test, y_test)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
