add more exploratory plots on log scale; trial with neural networks

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -444,7 +444,7 @@
     }
    ],
    "source": [
-    "# there are 1181 duplications in the 'name' column. What should we do about this?\n",
+    "# there are 1181 duplications in the 'name' column\n",
     "print('Number of duplicate entries : %d' % df.duplicated(subset = ['name']).sum())\n",
     "# remove duplicates \n",
     "df = df[~df.duplicated(subset = ['name'], keep = 'first')]"
