Try XGBoost classifier => still 77% (same as simple Gradient Boosting)

--- a/AndroidScience.ipynb
+++ b/AndroidScience.ipynb
@@ -542,6 +542,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "xgb = xgboost.XGBClassifier(\n",
+    "    n_estimators=320,\n",
+    "    max_depth=3,\n",
+    "    learning_rate=0.1,\n",
+    "    n_jobs=-1,\n",
+    "    gamma=0,\n",
+    "    min_child_weight=1,\n",
+    "#     max_delta_step=0,\n",
+    "    subsample=1,\n",
+    "    random_state = 42\n",
+    ")\n",
+    "grid_fit = False\n",
+    "if grid_fit:\n",
+    "    params = {\n",
+    "        'n_estimators' : [20, 50, 80, 100, 200, 300, 320],\n",
+    "        'max_depth' : [1, 2, 3, 4, 5],\n",
+    "        'learning_rate': [0.01, 0.05, 0.1, 0.15],\n",
+    "        'gamma': [0, 1, 2]\n",
+    "    }\n",
+    "    grid = GridSearchCV(estimator = xgb,\n",
+    "                  param_grid = params,\n",
+    "                  cv = 5, iid = False, return_train_score=True, n_jobs=-1)\n",
+    "    grid.fit(x_train, y_train)\n",
+    "    grid.score(x_test, y_test)\n",
+    "    grid.best_params_\n",
+    "else:\n",
+    "    xgb.fit(x_train, y_train)\n",
+    "    xgb.score(x_train, y_train)\n",
+    "    xgb.score(x_test, y_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
