Add new models to Voting classifier

--- a/AndroidScience.ipynb
+++ b/AndroidScience.ipynb
@@ -347,7 +347,7 @@
    "outputs": [],
    "source": [
     "# Random Forest\n",
-    "rf =  ensemble.RandomForestClassifier(random_state = 42, max_features=2, max_depth=12, n_estimators=30, min_samples_split=5)\n",
+    "rf =  ensemble.RandomForestClassifier(n_estimators=30, max_features=2, max_depth=12, min_samples_split=5, random_state=42)\n",
     "grid_fit = False\n",
     "if grid_fit:\n",
     "    params = {\n",
@@ -597,7 +597,7 @@
     "from model import Model, ModelsBenchmark\n",
     "from sklearn.ensemble import VotingClassifier\n",
     "\n",
-    "models = [svc, rf, dt, knn, ada, gbc, bag]\n",
+    "models = [svc, rf, dt, knn, ada, gbc, bag, xgb]\n",
     "# add voting method\n",
     "estimators = [ (model.__class__.__name__,model) for model in models]\n",
     "voting_clf = VotingClassifier(estimators=estimators, voting='soft', n_jobs=-1)\n",
@@ -905,15 +905,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn import ensemble, svm, neighbors\n",
     "from collections import Counter\n",
     "estimators = [\n",
-    "    ('svc', svm.SVC(kernel ='rbf', random_state=42, probability=True)),\n",
-    "    ('rf', ensemble.RandomForestClassifier(n_estimators=100, min_impurity_decrease=0, min_samples_leaf=1, random_state=42)),\n",
-    "    ('knn', neighbors.KNeighborsClassifier(n_neighbors=2))\n",
+    "#     ('svc', svm.SVC(kernel = 'rbf', random_state=42, probability = True, C = 1, tol = .001, gamma = 9)),\n",
+    "    ('rf', ensemble.RandomForestClassifier(random_state = 42, max_features=3, max_depth=12, n_estimators=30, min_samples_split=5)),\n",
+    "    ('knn', neighbors.KNeighborsClassifier(n_neighbors=2)),\n",
+    "    ('ada', ensemble.AdaBoostClassifier(n_estimators=80, random_state = 42)),\n",
+    "    ('gb', ensemble.GradientBoostingClassifier(n_estimators=400, loss='deviance', learning_rate=0.15, subsample=0.9, random_state = 42))\n",
     "]\n",
-    "weights = [112, 89, 1]\n",
-    "voting_classifier = VotingClassifier(estimators=estimators, voting='soft', weights=weights, n_jobs=-1)\n",
+    "weights = [5, 10, 40, 140]\n",
+    "voting_classifier = ensemble.VotingClassifier(estimators=estimators, voting='soft', weights=weights, n_jobs=-1)\n",
     "voting_classifier.fit(x_train, y_train)\n",
     "confidence = voting_classifier.score(x_test, y_test)\n",
     "predictions = voting_classifier.predict(x_test)\n",
