--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +63,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -83,7 +75,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +244,7 @@
        "4      4.4 and up  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +337,7 @@
        "4  Positive      1.00      0.300000  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -440,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minMax(df):\n",
+    "    return df.min(), df.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,17 @@
        "              500,         10,          1,          5,          0])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1000000000)"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,12 +495,13 @@
     "new_df = df['installs'].map(lambda s : s[:-1].replace(',',''))\n",
     "new_df[new_df == ''] = 0\n",
     "df['installs'] = new_df.astype(int)\n",
-    "df['installs'].unique()"
+    "df['installs'].unique()\n",
+    "minMax(df['installs'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +515,17 @@
        "Name: reviews, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, 78158306)"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,12 +533,13 @@
    "source": [
     "# preformat reviews\n",
     "df['reviews'] = df['reviews'].astype(int)\n",
-    "df['reviews'].head()"
+    "df['reviews'].head()\n",
+    "minMax(df['reviews'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +553,7 @@
        "Name: size, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -544,7 +568,17 @@
        "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(-1, 100000)"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,12 +598,33 @@
     "        return number\n",
     "df['size'].head()\n",
     "df['size'] = df['size'].apply(size_transform).astype(int)\n",
-    "df['size'].head()"
+    "df['size'].head()\n",
+    "minMax(df['size'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 100000)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minMax(df[df['size'] != -1]['size'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +644,17 @@
        "       394.99,   1.26,   1.2 ,   1.04])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 400.0)"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,12 +664,13 @@
     "# df['price'].unique()\n",
     "temp_df = df['price'].apply(lambda s: s.replace('$', ''))\n",
     "df['price'] = temp_df.astype(float)\n",
-    "df['price'].unique()"
+    "df['price'].unique()\n",
+    "minMax(df['price'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -669,7 +735,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -679,7 +745,7 @@
        "Index(['Free', 'Paid'], dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +777,7 @@
        "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -729,7 +795,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +818,7 @@
        "array([0, 1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -764,7 +830,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -791,20 +857,20 @@
     {
      "data": {
       "text/plain": [
-       "Music & Audio;Music & Video          1\n",
-       "Entertainment;Education              1\n",
-       "Travel & Local;Action & Adventure    1\n",
-       "Tools;Education                      1\n",
-       "Adventure;Education                  1\n",
-       "Health & Fitness;Education           1\n",
-       "Casual;Music & Video                 1\n",
-       "Arcade;Pretend Play                  1\n",
-       "Art & Design;Pretend Play            1\n",
-       "Books & Reference;Creativity         1\n",
+       "Video Players & Editors;Creativity    1\n",
+       "Music & Audio;Music & Video           1\n",
+       "Adventure;Brain Games                 1\n",
+       "Strategy;Creativity                   1\n",
+       "Lifestyle;Pretend Play                1\n",
+       "Travel & Local;Action & Adventure     1\n",
+       "Art & Design;Action & Adventure       1\n",
+       "Lifestyle;Education                   1\n",
+       "Role Playing;Education                1\n",
+       "Role Playing;Brain Games              1\n",
        "Name: genres, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +890,7 @@
        "       34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -845,7 +911,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,20 +1097,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.0, 9.0)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['version'] = df['version'].astype(str).apply(vs_transform).astype(float)"
+    "df['version'] = df['version'].astype(str).apply(vs_transform).astype(float)\n",
+    "minMax(df['version'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 9.0)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minMax(df[df['version'] != -1]['version'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['android_version'] = df['android_version'].astype(str).apply(vs_transform).astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 8.0)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minMax(df[df['android_version'] != -1]['android_version'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Timestamp('2010-05-21 00:00:00'), Timestamp('2018-08-08 00:00:00'))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minMax(df['last_updated'])"
    ]
   },
   {
